@@ -1,7 +1,7 @@
 <html>
 <!-- $Id$ -->
 <head>
-<title>Tapestry Release 0.2.6</title>
+<title>Tapestry Release 0.2.7</title>
 <body>
 
 <A href="http://sourceforge.net/project/?group_id=4754"> 
@@ -15,12 +15,16 @@ width="88" height="31" border="0" alt="SourceForge Logo">
 <h2>Getting Started</h2>
 
 <p>Tapestry is now distributed as a pre-compiled JAR file and includes pre-generated
-<a href="javadoc/Tapestry/overview-summary.html">Javadoc</a>.
+<a href="javadoc/Tapestry/overview-summary.html">Javadoc</a>.  
+
 
 <p>Also included with the distribution are a number of additional JAR files that are also
 released under open-source licenses.  The end result is that, after installing the
 <a href="JBE/Manual.pdf">Java Build Environment</a>
 you can have the tutorials up and running in seconds!
+
+<p>The JARs were compiled on Windows 2000 using Sun's JDK 1.3 compiler, however it is easy
+to rebuild the JARs on different platforms and different compilers.
 
 <p>This product includes software developed by the Apache Software Foundation (
 <a href="http://www.apache.org/">http://www.apache.org/</a>).
